RESOLVED FIXED134841
REGRESSION (r168868): eBay 'see all' links fail due to different JS bindings conversion behavior.
https://bugs.webkit.org/show_bug.cgi?id=134841
Summary REGRESSION (r168868): eBay 'see all' links fail due to different JS bindings ...
alan
Reported 2014-07-11 13:29:31 PDT
1. Go to any eBay search result page. 2. Click on any ‘See all’ link on the left hand size 3. No response. <rdar://problem/17577563>
Attachments
Patch (20.03 KB, patch)
2014-07-11 13:35 PDT, alan
no flags
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (537.10 KB, application/zip)
2014-07-11 14:32 PDT, Build Bot
no flags
Patch (23.28 KB, patch)
2014-07-11 14:53 PDT, alan
no flags
Patch (23.28 KB, patch)
2014-07-11 14:57 PDT, alan
no flags
alan
Comment 1 2014-07-11 13:35:42 PDT
Build Bot
Comment 2 2014-07-11 14:32:51 PDT
Comment on attachment 234777 [details] Patch Attachment 234777 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5314067816251392 New failing tests: fast/dom/non-numeric-values-numeric-parameters.html
Build Bot
Comment 3 2014-07-11 14:32:56 PDT
Created attachment 234780 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 4 2014-07-11 14:53:46 PDT
WebKit Commit Bot
Comment 5 2014-07-11 14:55:27 PDT
Comment on attachment 234784 [details] Patch Rejecting attachment 234784 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 234784, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.appspot.com/results/5648716098699264
alan
Comment 6 2014-07-11 14:57:08 PDT
WebKit Commit Bot
Comment 7 2014-07-11 15:36:42 PDT
Comment on attachment 234785 [details] Patch Clearing flags on attachment: 234785 Committed r171014: <http://trac.webkit.org/changeset/171014>
WebKit Commit Bot
Comment 8 2014-07-11 15:36:47 PDT
All reviewed patches have been landed. Closing bug.
alan
Comment 9 2014-07-17 18:31:12 PDT
*** Bug 135009 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.