REGRESSION (r168868): eBay 'see all' links fail due to different JS bindings conversion behavior. https://bugs.webkit.org/show_bug.cgi?id=134841 <rdar://problem/17577563>

Reviewed by Simon Fraser.

Revert back to type int for Element.scroll* APIs in order to preserve exception handling
behavior.

Source/WebCore:
Test: cssom/non-subpixel-scroll-top-left-values.html

* dom/Element.cpp:
(WebCore::Element::scrollLeft):
(WebCore::Element::scrollTop):
(WebCore::Element::setScrollLeft):
(WebCore::Element::setScrollTop):
(WebCore::Element::scrollWidth):
(WebCore::Element::scrollHeight):
* dom/Element.h:
* dom/Element.idl:
* html/HTMLBodyElement.cpp:
(WebCore::adjustForZoom):
(WebCore::HTMLBodyElement::scrollLeft):
(WebCore::HTMLBodyElement::setScrollLeft):
(WebCore::HTMLBodyElement::scrollTop):
(WebCore::HTMLBodyElement::setScrollTop):
(WebCore::HTMLBodyElement::scrollHeight):
(WebCore::HTMLBodyElement::scrollWidth):
* html/HTMLBodyElement.h:

LayoutTests:
* cssom/non-subpixel-scroll-top-left-values-expected.txt: Added.
* cssom/non-subpixel-scroll-top-left-values.html: Added.


Canonical link: https://commits.webkit.org/152791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171014 268f45cc-cd09-0410-ab3c-d52691b4dbfc